# helix-adl-tools

./: .gitignore  .gitmodules  README.md  dodo.py  helix-adl-tools.cabal  stack.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
adl/sql/: schema.adl
api-viewer/: README.md
api-viewer/client/: .prettierrc  package.json  tsconfig.json  tslint.json
api-viewer/client/config/: common-webpack-options.js  webpack.config.dev.js  webpack.config.prod.js
api-viewer/client/public/: index.html  manifest.json
api-viewer/client/src/: index.tsx  markdown-docs.ts
api-viewer/client/src/adl-gen/: common.ts  resolver.ts
api-viewer/client/src/adl-gen/common/: db.ts  http.ts  strings.ts  tabular.ts  ui.ts
api-viewer/client/src/adl-gen/common/config/: aws.ts  db.ts  emailer.ts  google.ts  jwt.ts  log.ts  server.ts
api-viewer/client/src/adl-gen/helix/protoapp/: db.ts  requests-rtypes.ts  requests.ts  uiconfig.ts
api-viewer/client/src/adl-gen/sys/: annotations.ts
api-viewer/client/src/routing/: router.ts  routes.ts
api-viewer/client/src/ui/: app.css  app.tsx
api-viewer/client/src/ui/common/: colors.css  fonts.css  metrics.css
api-viewer/client/src/ui/scenes/: api-summary-scene.css  api-summary-scene.tsx  decl-scene.css  decl-scene.tsx  doc-page-scene.tsx  openapi-scene.tsx  request-scene.css  request-scene.tsx
api-viewer/client/src/util/: adl-renderers.css  adl-renderers.tsx  adl-utils.ts  assert-never.tsx  openapi-utils.ts  timers.tsx
haskell/: stack.yaml
haskell/hx-adl/: helix-adl-tools.cabal
haskell/hx-adl/adl/sql/: schema.adl
haskell/hx-adl/lib/: Utils.hs
haskell/hx-adl/lib/ADL/Http/: JavaReqs.hs  TypescriptReqs.hs  Utils.hs
haskell/hx-adl/lib/ADL/Sql/: JavaTables.hs  JavaTablesV2.hs  JavaUtils.hs  SchemaUtils.hs
haskell/hx-adl/scripts/: gen-adl.sh
hx/: dodo_helpers.py  dodo_templates.py
lib/ADL/Http/: JavaReqs.hs  TypescriptReqs.hs
lib/ADL/Sql/: JavaTables.hs  Schema.hs  SchemaUtils.hs
platform/docker/: hx-adl.sh  install.sh
scripts/: adlc  dockerized-adlc  dockerized-adlc-stdlib  gen-adl.sh  hx-adl  hx-adl-hs
src/: Main.hs
src/ADL/Sql/: JavaTables.hs  Schema.hs  SchemaUtils.hs
typescript/hx-adl/: gen-adl.sh  package.json  tsconfig.json
typescript/hx-adl/adl/mobile/: reactnative.adl
typescript/hx-adl/src/: gen-javahttpreqs.ts  gen-javarnmodule.ts  gen-javatables.ts  gen-openapi.ts  gen-reactnativebridge.ts  gen-sql-alter-format.ts  gen-sqlmigration.ts  gen-sqlschema.ts  gen-typescripthttpreqs.ts  main.ts  util.ts
typescript/hx-adl/src/adl-gen/: resolver.ts
typescript/hx-adl/src/java-services/: import-helper.ts  java-services.ts
typescript/hx-adl/src/openapi/: adl-utils.ts  openapi-utils.ts
typescript/hx-adl/src/react-native/: java-helpers.ts  react-native-utils.ts  typescript-helpers.ts
typescript/hx-adl/src/ts-services/: code-gen.ts  import-helper.ts  ts-services.ts
