name:                helix-adl-tools
version:             0.1.0.0
synopsis:            Helix specific ADL tools
-- description:
--homepage:
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Tim Docker
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Sql.Schema
                     , ADL.Sql.SchemaUtils
                     , ADL.Sql.JavaTables
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0.2.1 && < 1.1
                     , adl-runtime
                     , adl-utils
                     , adl-compiler-lib
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , bytestring >= 0.10.8.1 && < 0.11
                     , cases >= 0.1.3.2 && < 0.2
                     , containers >= 0.5.7.1 && < 0.6
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2.1 && < 2.3
                     , process >= 1.4.3 && < 1.5
                     , scientific >= 0.3.4.10 && < 0.4
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , vector >= 0.11.0.0 && < 0.12