name:                helix-adl-tools
version:             0.1.0.0
synopsis:            Helix specific ADL tools
-- description:
--homepage:
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Tim Docker
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable hx-adl-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0.2.1 && < 1.5
                     , adl-runtime
                     , adl-utils
                     , adl-compiler-lib
                     , adl-compiler
                     , helix-adl-tools
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , bytestring >= 0.10.8.1 && < 0.11
                     , containers >= 0.5.7.1 && < 0.7
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2.1 && < 2.3
                     , process >= 1.4.3 && < 1.7
                     , scientific >= 0.3.4.10 && < 0.4
                     , transformers >= 0.5.2 && < 0.6
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , vector >= 0.11.0.0 && < 0.13
library
  hs-source-dirs:      lib
  exposed-modules:     ADL.Sql.Schema
                     , ADL.Sql.SchemaUtils
                     , ADL.Sql.JavaUtils
                     , ADL.Sql.JavaTables
                     , ADL.Sql.JavaTablesV2
                     , ADL.Http.JavaReqs
                     , ADL.Http.TypescriptReqs
                     , ADL.Http.Utils
                     , Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0.2.1 && < 1.5
                     , adl-runtime
                     , adl-utils
                     , adl-compiler-lib
                     , adl-compiler
                     , base64-bytestring >= 1.0.0.1 && < 1.1
                     , bytestring >= 0.10.8.1 && < 0.11
                     , containers >= 0.5.7.1 && < 0.7
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2.1 && < 2.3
                     , process >= 1.4.3 && < 1.7
                     , scientific >= 0.3.4.10 && < 0.4
                     , text >= 1.2 && < 1.3
                     , transformers >= 0.5.2 && < 0.6
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , vector >= 0.11.0.0 && < 0.13
