cabal-version:       2.4
name:                helix-adl-tools
version:             0.1.0.0
synopsis:            Helix specific ADL tools
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Tim Docker
category:            Database
build-type:          Simple


executable hx-adl-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , adl-runtime
                     , adl-compiler
                     , helix-adl-tools
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , mtl
                     , process
                     , scientific
                     , transformers
                     , text
                     , unordered-containers
                     , vector
library
  hs-source-dirs:      lib
  exposed-modules:     ADL.Sql.Schema
                     , ADL.Sql.SchemaUtils
                     , ADL.Sql.JavaUtils
                     , ADL.Sql.JavaTables
                     , ADL.Sql.JavaTablesV2
                     , ADL.Http.JavaReqs
                     , ADL.Http.TypescriptReqs
                     , ADL.Http.Utils
                     , Utils
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , adl-runtime
                     , adl-compiler
                     , base64-bytestring
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , mtl
                     , process
                     , scientific
                     , text
                     , transformers
                     , unordered-containers
                     , vector
